Update validation module to support cjm_error_handling library.

--- a/nbs/core/validation.ipynb
+++ b/nbs/core/validation.ipynb
@@ -47,7 +47,15 @@
     "    ResourceStatus,\n",
     "    ResourceConflict,\n",
     "    WorkerState\n",
-    ")"
+    ")\n",
+    "\n",
+    "# Optional: Import error handling library if available\n",
+    "try:\n",
+    "    from cjm_error_handling.core.base import ErrorContext, ErrorSeverity\n",
+    "    from cjm_error_handling.core.errors import ValidationError, ResourceError\n",
+    "    _has_error_handling = True\n",
+    "except ImportError:\n",
+    "    _has_error_handling = False"
    ]
   },
   {
@@ -515,6 +523,332 @@
    "metadata": {},
    "source": [
     "The validation function uses dependency injection to avoid tight coupling. You provide helper functions that know how to work with your specific plugin registry implementation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5inzxgv2c5w",
+   "metadata": {},
+   "source": [
+    "## Error Handling Integration\n",
+    "\n",
+    "When the `cjm-error-handling` library is installed, you can convert `ValidationResult` objects into structured exceptions. This is useful when you want to raise errors instead of returning result objects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6o23pwh0664",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def validation_result_to_error(\n",
+    "    result: ValidationResult,  # Validation result to convert\n",
+    "    plugin_id: Optional[str] = None,  # Plugin ID for error context\n",
+    "    job_id: Optional[str] = None,  # Job ID for error context\n",
+    "    worker_pid: Optional[int] = None,  # Worker PID for error context\n",
+    "    **extra_context  # Additional context fields\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Convert a ValidationResult into a structured error.\n",
+    "    \n",
+    "    This helper allows you to convert validation results into exceptions\n",
+    "    when you prefer raising errors over returning result objects.\n",
+    "    \n",
+    "    Requires: cjm-error-handling library\n",
+    "    \n",
+    "    Example:\n",
+    "        ```python\n",
+    "        result = validate_resources_for_job(...)\n",
+    "        if not result.can_proceed:\n",
+    "            error = validation_result_to_error(result, plugin_id=\"whisper_large\")\n",
+    "            raise error\n",
+    "        ```\n",
+    "    \n",
+    "    Returns appropriate error type based on ValidationAction:\n",
+    "    - ABORT, USER_INTERVENTION -> ValidationError (not retryable)\n",
+    "    - WAIT_FOR_JOB, WAIT_FOR_OTHER_WORKER -> ResourceError (retryable)\n",
+    "    - RELOAD_PLUGIN -> Returns None (this is a success case)\n",
+    "    - PROCEED -> Returns None (this is a success case)\n",
+    "    \"\"\"\n",
+    "    if not _has_error_handling:\n",
+    "        raise ImportError(\n",
+    "            \"cjm-error-handling library not installed. \"\n",
+    "            \"Install it with: pip install cjm-error-handling\"\n",
+    "        )\n",
+    "    \n",
+    "    # Build error context\n",
+    "    ctx_kwargs = {}\n",
+    "    if plugin_id:\n",
+    "        ctx_kwargs['plugin_id'] = plugin_id\n",
+    "    if job_id:\n",
+    "        ctx_kwargs['job_id'] = job_id\n",
+    "    if worker_pid:\n",
+    "        ctx_kwargs['worker_pid'] = worker_pid\n",
+    "    if result.current_worker:\n",
+    "        ctx_kwargs['worker_pid'] = result.current_worker.pid\n",
+    "        if not plugin_id and result.current_worker.plugin_id:\n",
+    "            ctx_kwargs['plugin_id'] = result.current_worker.plugin_id\n",
+    "    \n",
+    "    ctx_kwargs['operation'] = 'validate_resources'\n",
+    "    \n",
+    "    # Add extra context\n",
+    "    if extra_context:\n",
+    "        ctx_kwargs['extra'] = extra_context\n",
+    "    \n",
+    "    # Add conflict info to extra context\n",
+    "    if result.conflict:\n",
+    "        if 'extra' not in ctx_kwargs:\n",
+    "            ctx_kwargs['extra'] = {}\n",
+    "        ctx_kwargs['extra']['resource_status'] = result.conflict.status.value\n",
+    "        ctx_kwargs['extra']['resource_type'] = result.conflict.resource_type.value\n",
+    "        if result.conflict.app_pids:\n",
+    "            ctx_kwargs['extra']['app_pids'] = result.conflict.app_pids\n",
+    "        if result.conflict.external_pids:\n",
+    "            ctx_kwargs['extra']['external_pids'] = result.conflict.external_pids\n",
+    "    \n",
+    "    context = ErrorContext(**ctx_kwargs)\n",
+    "    \n",
+    "    # Success cases - no error needed\n",
+    "    if result.action in (ValidationAction.PROCEED, ValidationAction.RELOAD_PLUGIN):\n",
+    "        return None\n",
+    "    \n",
+    "    # Determine error type and properties based on action\n",
+    "    if result.action == ValidationAction.ABORT:\n",
+    "        return ValidationError(\n",
+    "            message=result.message,\n",
+    "            context=context,\n",
+    "            severity=ErrorSeverity.ERROR,\n",
+    "            is_retryable=False\n",
+    "        )\n",
+    "    \n",
+    "    elif result.action == ValidationAction.USER_INTERVENTION:\n",
+    "        # External process conflict - needs user action\n",
+    "        suggested_action = \"Stop external GPU processes to proceed\"\n",
+    "        return ResourceError(\n",
+    "            message=result.message,\n",
+    "            context=context,\n",
+    "            severity=ErrorSeverity.WARNING,\n",
+    "            is_retryable=False,  # Won't fix itself\n",
+    "            resource_type=\"GPU\",\n",
+    "            suggested_action=suggested_action\n",
+    "        )\n",
+    "    \n",
+    "    elif result.action in (ValidationAction.WAIT_FOR_JOB, ValidationAction.WAIT_FOR_OTHER_WORKER):\n",
+    "        # Resource temporarily busy - retryable\n",
+    "        if result.action == ValidationAction.WAIT_FOR_JOB:\n",
+    "            suggested_action = \"Wait for current job to complete or cancel it\"\n",
+    "        else:\n",
+    "            suggested_action = f\"Wait for {result.current_worker.worker_type} worker to finish or stop it\"\n",
+    "        \n",
+    "        return ResourceError(\n",
+    "            message=result.message,\n",
+    "            context=context,\n",
+    "            severity=ErrorSeverity.WARNING,\n",
+    "            is_retryable=True,  # Transient conflict\n",
+    "            resource_type=\"GPU\",\n",
+    "            suggested_action=suggested_action\n",
+    "        )\n",
+    "    \n",
+    "    # Shouldn't reach here, but handle gracefully\n",
+    "    return ValidationError(\n",
+    "        message=result.message,\n",
+    "        context=context,\n",
+    "        severity=ErrorSeverity.ERROR,\n",
+    "        is_retryable=False\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3uf44mkdgq",
+   "metadata": {},
+   "source": [
+    "### Example: Converting ValidationResult to Errors\n",
+    "\n",
+    "This shows how to use the error handling integration:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ktl8zbbo0va",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Example 1: ABORT -> ValidationError\n",
+      "  Error type: ValidationError\n",
+      "  Message: Plugin transcription_whisper_huge not found.\n",
+      "  Retryable: False\n",
+      "  Severity: error\n",
+      "  Context: plugin_id=transcription_whisper_huge, job_id=job-123\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1: ABORT case (plugin not found)\n",
+    "if _has_error_handling:\n",
+    "    abort_result = ValidationResult(\n",
+    "        action=ValidationAction.ABORT,\n",
+    "        can_proceed=False,\n",
+    "        message=\"Plugin transcription_whisper_huge not found.\"\n",
+    "    )\n",
+    "    \n",
+    "    error = validation_result_to_error(\n",
+    "        abort_result,\n",
+    "        plugin_id=\"transcription_whisper_huge\",\n",
+    "        job_id=\"job-123\"\n",
+    "    )\n",
+    "    \n",
+    "    print(\"Example 1: ABORT -> ValidationError\")\n",
+    "    print(f\"  Error type: {type(error).__name__}\")\n",
+    "    print(f\"  Message: {error.get_user_message()}\")\n",
+    "    print(f\"  Retryable: {error.is_retryable}\")\n",
+    "    print(f\"  Severity: {error.severity.value}\")\n",
+    "    print(f\"  Context: plugin_id={error.context.plugin_id}, job_id={error.context.job_id}\")\n",
+    "else:\n",
+    "    print(\"cjm-error-handling not installed - skipping example\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "pghg72dshle",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Example 2: WAIT_FOR_JOB -> ResourceError\n",
+      "  Error type: ResourceError\n",
+      "  Message: GPU in use by running job (PID 54321). Wait for completion or cancel job.\n",
+      "  Retryable: True\n",
+      "  Resource type: GPU\n",
+      "  Suggested action: Wait for current job to complete or cancel it\n",
+      "  Context worker PID: 54321\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2: WAIT_FOR_JOB case (GPU busy with same worker type)\n",
+    "if _has_error_handling:\n",
+    "    # Simulate a worker state\n",
+    "    from cjm_fasthtml_resources.core.manager import WorkerState\n",
+    "    \n",
+    "    busy_worker = WorkerState(\n",
+    "        pid=54321,\n",
+    "        worker_type=\"transcription\",\n",
+    "        job_id=\"job-current\",\n",
+    "        plugin_id=\"whisper_large\",\n",
+    "        plugin_name=\"whisper_large\",\n",
+    "        loaded_plugin_resource=\"openai/whisper-large-v3\",\n",
+    "        config={\"model_id\": \"openai/whisper-large-v3\"},\n",
+    "        status=\"running\"\n",
+    "    )\n",
+    "    \n",
+    "    wait_result = ValidationResult(\n",
+    "        action=ValidationAction.WAIT_FOR_JOB,\n",
+    "        can_proceed=False,\n",
+    "        message=\"GPU in use by running job (PID 54321). Wait for completion or cancel job.\",\n",
+    "        current_worker=busy_worker\n",
+    "    )\n",
+    "    \n",
+    "    error = validation_result_to_error(\n",
+    "        wait_result,\n",
+    "        plugin_id=\"whisper_base\",\n",
+    "        job_id=\"job-456\"\n",
+    "    )\n",
+    "    \n",
+    "    print(\"\\nExample 2: WAIT_FOR_JOB -> ResourceError\")\n",
+    "    print(f\"  Error type: {type(error).__name__}\")\n",
+    "    print(f\"  Message: {error.get_user_message()}\")\n",
+    "    print(f\"  Retryable: {error.is_retryable}\")\n",
+    "    print(f\"  Resource type: {error.resource_type}\")\n",
+    "    print(f\"  Suggested action: {error.suggested_action}\")\n",
+    "    print(f\"  Context worker PID: {error.context.worker_pid}\")\n",
+    "else:\n",
+    "    print(\"cjm-error-handling not installed - skipping example\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "buq2utuvkk9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Example 3: Practical Usage Pattern\n",
+      "============================================================\n",
+      "Caught ValidationError: Plugin not found\n",
+      "  Action: Don't retry, fix the plugin ID\n",
+      "\n",
+      "Caught ResourceError: GPU busy\n",
+      "  Retryable: True\n",
+      "  Action: Retry after GPU becomes available\n",
+      "\n",
+      "============================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 3: Practical usage pattern - raise error if validation fails\n",
+    "if _has_error_handling:\n",
+    "    print(\"\\nExample 3: Practical Usage Pattern\")\n",
+    "    print(\"=\"*60)\n",
+    "    \n",
+    "    def start_job_with_validation(plugin_id, job_id, validation_result):\n",
+    "        \"\"\"Example function showing how to use validation + errors together.\"\"\"\n",
+    "        # Check if we can proceed\n",
+    "        if not validation_result.can_proceed:\n",
+    "            # Convert to error and raise\n",
+    "            error = validation_result_to_error(\n",
+    "                validation_result,\n",
+    "                plugin_id=plugin_id,\n",
+    "                job_id=job_id\n",
+    "            )\n",
+    "            raise error\n",
+    "        \n",
+    "        # Validation passed, proceed with job\n",
+    "        return f\"Job {job_id} started successfully with {plugin_id}\"\n",
+    "    \n",
+    "    # Test with ABORT case\n",
+    "    try:\n",
+    "        result = ValidationResult(\n",
+    "            action=ValidationAction.ABORT,\n",
+    "            can_proceed=False,\n",
+    "            message=\"Plugin not found\"\n",
+    "        )\n",
+    "        start_job_with_validation(\"whisper_huge\", \"job-789\", result)\n",
+    "    except ValidationError as e:\n",
+    "        print(f\"Caught ValidationError: {e.get_user_message()}\")\n",
+    "        print(f\"  Action: Don't retry, fix the plugin ID\")\n",
+    "    \n",
+    "    # Test with WAIT_FOR_JOB case (retryable)\n",
+    "    try:\n",
+    "        result = ValidationResult(\n",
+    "            action=ValidationAction.WAIT_FOR_JOB,\n",
+    "            can_proceed=False,\n",
+    "            message=\"GPU busy\"\n",
+    "        )\n",
+    "        start_job_with_validation(\"whisper_base\", \"job-999\", result)\n",
+    "    except ResourceError as e:\n",
+    "        print(f\"\\nCaught ResourceError: {e.get_user_message()}\")\n",
+    "        print(f\"  Retryable: {e.is_retryable}\")\n",
+    "        print(f\"  Action: Retry after GPU becomes available\")\n",
+    "    \n",
+    "    print(\"\\n\" + \"=\"*60)\n",
+    "else:\n",
+    "    print(\"cjm-error-handling not installed - skipping example\")"
    ]
   },
   {
