--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -446,7 +446,8 @@
     "from cjm_fasthtml_resources.core.validation import (\n",
     "    ValidationAction,\n",
     "    ValidationResult,\n",
-    "    validate_resources_for_job\n",
+    "    validate_resources_for_job,\n",
+    "    validation_result_to_error\n",
     ")\n",
     "```\n",
     "\n",
@@ -466,6 +467,38 @@
     "    verbose:bool=False # Whether to print verbose logging\n",
     ") -> ValidationResult: # ValidationResult with action to take\n",
     "    \"Validate if resources are available to run a job with the specified plugin. This function is dependency-injected with helper functions to avoid tight coupling with specific plugin registry implementations.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def validation_result_to_error(\n",
+    "    result: ValidationResult,  # Validation result to convert\n",
+    "    plugin_id: Optional[str] = None,  # Plugin ID for error context\n",
+    "    job_id: Optional[str] = None,  # Job ID for error context\n",
+    "    worker_pid: Optional[int] = None,  # Worker PID for error context\n",
+    "    **extra_context  # Additional context fields\n",
+    ")\n",
+    "    \"\"\"\n",
+    "    Convert a ValidationResult into a structured error.\n",
+    "    \n",
+    "    This helper allows you to convert validation results into exceptions\n",
+    "    when you prefer raising errors over returning result objects.\n",
+    "    \n",
+    "    Requires: cjm-error-handling library\n",
+    "    \n",
+    "    Example:\n",
+    "        ```python\n",
+    "        result = validate_resources_for_job(...)\n",
+    "        if not result.can_proceed:\n",
+    "            error = validation_result_to_error(result, plugin_id=\"whisper_large\")\n",
+    "            raise error\n",
+    "        ```\n",
+    "    \n",
+    "    Returns appropriate error type based on ValidationAction:\n",
+    "    - ABORT, USER_INTERVENTION -> ValidationError (not retryable)\n",
+    "    - WAIT_FOR_JOB, WAIT_FOR_OTHER_WORKER -> ResourceError (retryable)\n",
+    "    - RELOAD_PLUGIN -> Returns None (this is a success case)\n",
+    "    - PROCEED -> Returns None (this is a success case)\n",
+    "    \"\"\"\n",
     "```\n",
     "\n",
     "#### Classes\n",
