--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -476,29 +476,8 @@
     "    job_id: Optional[str] = None,  # Job ID for error context\n",
     "    worker_pid: Optional[int] = None,  # Worker PID for error context\n",
     "    **extra_context  # Additional context fields\n",
-    ")\n",
-    "    \"\"\"\n",
-    "    Convert a ValidationResult into a structured error.\n",
-    "    \n",
-    "    This helper allows you to convert validation results into exceptions\n",
-    "    when you prefer raising errors over returning result objects.\n",
-    "    \n",
-    "    Requires: cjm-error-handling library\n",
-    "    \n",
-    "    Example:\n",
-    "        ```python\n",
-    "        result = validate_resources_for_job(...)\n",
-    "        if not result.can_proceed:\n",
-    "            error = validation_result_to_error(result, plugin_id=\"whisper_large\")\n",
-    "            raise error\n",
-    "        ```\n",
-    "    \n",
-    "    Returns appropriate error type based on ValidationAction:\n",
-    "    - ABORT, USER_INTERVENTION -> ValidationError (not retryable)\n",
-    "    - WAIT_FOR_JOB, WAIT_FOR_OTHER_WORKER -> ResourceError (retryable)\n",
-    "    - RELOAD_PLUGIN -> Returns None (this is a success case)\n",
-    "    - PROCEED -> Returns None (this is a success case)\n",
-    "    \"\"\"\n",
+    ") -> Optional[Exception]:  # Structured error based on validation action, or None if no error needed\n",
+    "    \"Convert a ValidationResult into a structured error. Requires cjm-error-handling library.\"\n",
     "```\n",
     "\n",
     "#### Classes\n",
